<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".test.TestThemaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFF388">

        <ImageView
            android:id="@+id/testThemaBackArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/backarrow"
            android:src="@drawable/ic_back_24"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/testThemaToolbar"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:title="@string/test_yourself"
            app:subtitle="@string/bundeslander"
            tools:ignore="RtlSymmetry"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:src="@drawable/ic_test"
            android:contentDescription="@string/test_logo" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/testThemaQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dummyText"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/testThemaAnswerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:text="@string/dummyText"
            android:theme="@style/CheckBoxTheme"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/testThemaAnswerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:text="@string/dummyText"
            android:theme="@style/CheckBoxTheme"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/testThemaAnswerC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:text="@string/dummyText"
            android:theme="@style/CheckBoxTheme"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/testThemaAnswerD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummyText"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:theme="@style/CheckBoxTheme"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/testImgQestion"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:contentDescription="@string/logo" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15sp">

        <Button
            android:id="@+id/btnTestPrevious"
            android:text="@string/last"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textColor="#ffffff"
            android:background="@drawable/mybutton"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnTestNext"
            android:text="@string/next"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textColor="#ffffff"
            android:background="@drawable/mybutton"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/testThemaSuccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/success_explanation"
        android:textColor="@color/colorBlack"
        android:textSize="10sp"
        android:textStyle="italic"
        tools:ignore="RelativeOverlap,SmallSp" />
</LinearLayout>