<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".learn.ThemaActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFF388">

        <ImageView
            android:id="@+id/themaBackArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/backarrow"
            android:src="@drawable/ic_back_24"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/themaToolbar"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:title="@string/title_lernen"
            app:subtitle="@string/select_a_thema"
            tools:ignore="RtlSymmetry"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:src="@drawable/ic_test"
            android:contentDescription="@string/test_logo"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/themaRecyclerView"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>

</LinearLayout>