<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exam.ExamActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF388"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/examBackArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/backarrow"
                android:src="@drawable/ic_back_24" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/examToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingStart="10dp"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:subtitle="@string/citizenship_exam"
                app:title="@string/trial_exam"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:contentDescription="@string/flag"
                android:src="@mipmap/ic_exam"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/examQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dummyText"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/examAnswerA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:text="@string/dummyText"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:theme="@style/CheckBoxTheme" />

            <CheckBox
                android:id="@+id/examAnswerB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:text="@string/dummyText"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:theme="@style/CheckBoxTheme" />

            <CheckBox
                android:id="@+id/examAnswerC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:text="@string/dummyText"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:theme="@style/CheckBoxTheme" />

            <CheckBox
                android:id="@+id/examAnswerD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:text="@string/dummyText"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:theme="@style/CheckBoxTheme" />

            <ImageView
                android:id="@+id/examQuestionFoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/question_picture"
                android:visibility="gone" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnExamPrevious"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/mybutton"
                android:text="@string/previous"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnExamNext"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/mybutton"

                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnExamFinish"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/mybutton"
            android:backgroundTint="@color/colorGreenDark"
            android:text="@string/finish_exam"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>
</ScrollView>