<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".exam.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF388"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/resultBackArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/backarrow"
            android:src="@drawable/ic_back_24" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/resultToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingStart="10dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:subtitle="@string/results"
            app:title="@string/trial_exam"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/exam_logo"
            android:src="@mipmap/ic_exam"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="95"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/resultPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/resultImg300"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:contentDescription="@string/exam_logo"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/resultImgState"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:contentDescription="@string/exam_logo"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
            android:paddingEnd="5dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/general_questions"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:paddingEnd="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:text="@string/true_answer"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/textResultRichtihe300"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorBlack"
                        tools:ignore="RtlCompat" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:text="@string/false_answer"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/textResultFalche300"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorBlack"
                        tools:ignore="RtlCompat" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:text="@string/empty_answer"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/textResultEmpty300"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorBlack"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:paddingStart="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/state_questions"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:textAlignment="center"
                        android:paddingEnd="30dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center_vertical"
                            android:text="@string/true_answer"
                            android:textColor="@color/colorBlack" />

                        <TextView
                            android:id="@+id/textResultRichtigeState"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorBlack"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center_vertical"
                            android:text="@string/false_answer"
                            android:textColor="@color/colorBlack" />

                        <TextView
                            android:id="@+id/textResultFalcheState"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorBlack"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center_vertical"
                            android:text="@string/empty_answer"
                            android:textColor="@color/colorBlack" />

                        <TextView
                            android:id="@+id/textResultEmptyState"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorBlack"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/textResultSuccess"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/marck_script"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/congratulations"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/resultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueDark"
        android:text="@string/show_questions"
        android:textAllCaps="false"
        android:textColor="@color/colorYellow"
        android:textSize="18sp" />

</LinearLayout>